compiler/tools/fpp-check/test/invalid_symbols/module_as_port.fpp
module M {

  passive component C {

    output port p: M

  }

}
